refactor(ui): remove semantic ui from action form and remove broadcast

--- a/ui/src/app/shared/action/action.html
+++ b/ui/src/app/shared/action/action.html
@@ -136,7 +136,7 @@
                     <li nz-menu-item>
                         <button nz-popconfirm nzDanger nzBlock
                                 name="deleteBtn"
-                                nzPopconfirmTitle="Are you sure delete this action?"
+                                nzPopconfirmTitle="Are you sure you want to delete this action?"
                                 (nzOnConfirm)="sendActionEvent('delete')"
                                 nzPopconfirmPlacement="topLeft"
                                 nz-button>
