--- a/ui/src/ngzorro.dark.less
+++ b/ui/src/ngzorro.dark.less
@@ -3,3 +3,11 @@
 @component-background: #383736;
 
 @layout-body-background: #2d2c2c;
+
+.CodeMirror {
+  border: 1px solid #434343;
+}
+.nzSegment {
+  background: #1f1f1f;
+  border: none;
+}
