--- a/ui/src/app/shared/permission/list/permission.list.html
+++ b/ui/src/app/shared/permission/list/permission.list.html
@@ -40,7 +40,7 @@
                         </ng-container>
                         <ng-container *ngIf="mode === 'submit' && !gp.hasChanged">
                             <button nz-button nzType="primary" nzDanger [nzLoading]="gp.updating" name="deleteButton"
-                                    nz-popconfirm nzPopconfirmTitle="Are you sure to delete this permission ?"
+                                    nz-popconfirm nzPopconfirmTitle="Are you sure you want to delete this permission ?"
                                     (nzOnConfirm)="sendEvent('delete', gp)" nzPopconfirmPlacement="topLeft">
                                 <i nz-icon nzType="delete" nzTheme="outline"></i>Delete
                             </button>
